<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
    <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->

    <LinearLayout
        android:id="@+id/layout_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:padding="5dp"
            android:text="@string/string_0"
            android:textSize="45sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="Line"
            android:src="@drawable/back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <LinearLayout
            android:id="@+id/layout_numbers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_row4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_cancel"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_lbracket"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_lbracket"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_rbracket"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_rbracket"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_row3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_7"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_8"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_9"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_row2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_4"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_5"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_6"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_row1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_1"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_2"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_3"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_row0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_0"
                    android:textSize="45sp" />

                <Button
                    android:id="@+id/button_dot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_dot"
                    android:textSize="45sp" />

                <ImageButton
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/delete"
                    android:textSize="45sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_operation"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_division"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/string_division"
                android:textSize="45sp" />

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/string_multiplication"
                android:textSize="45sp" />

            <Button
                android:id="@+id/button_subtract"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/string_subtract"
                android:textSize="45sp" />

            <Button
                android:id="@+id/button_sum"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/string_sum"
                android:textSize="45sp" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/string_equal"
                android:textSize="45sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>